# petronel-gbfrf

./: Cargo.toml  build.rs
protobuf/: domain.proto  persistence.proto  requests.proto  responses.proto
src/: codec.rs  error.rs  main.rs  persistence.rs  protobuf.rs  websocket.rs
src/protobuf/: convert.rs  mod.rs
