[package]
authors = ["Walfie <walfington@gmail.com>"]
build = "build.rs"
name = "petronel-gbfrf"
version = "0.1.0"

[build-dependencies]
prost-build = "0.2"

[dependencies]
byteorder = "1.1"
bytes = "0.4"
chrono = "0.4"
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
prost = "0.2"
prost-derive = "0.2"
prost-types = "0.2"
redis = "0.8"
serde_json = "1.0"
tk-bufstream = "0.3"
tk-http = "0.3"
tk-listen = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"

[dependencies.petronel]
git = "https://github.com/walfie/petronel.git"
rev = "97ac7d838e7890f503c0f86ef4571bcc9d4a7fd4"

[dependencies.serde]
# TODO: Change petronel to not depend on this
features = ["rc"]
version = "1.0"
